[package]
name = "ecs-pong"
version = "0.1.0"
authors = ["Nuckal777"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.legion]
version = "0.2.4"
default-features = false

[dependencies.ncollide2d]
version = "0.23.2"

[dependencies.nalgebra]
version = "0.21.1"

[dependencies.glutin]
version = "0.24.1"

[dev-dependencies.approx]
version = "*"

[build-dependencies.gl_generator]
version = "0.14"
